--- a/views/login.html
+++ b/views/login.html
@@ -65,7 +65,7 @@
                     <el-input class="text_value" placeholder="请输入手机号"
                          v-model="attr_tel"     clearable>
                     </el-input>
-                    <el-input class="text_value" placeholder="请输入密码"
+                    <el-input class="text_value" placeholder="请输入密码" type = "password"
                         v-model="attr_password"       clearable>
                     </el-input>
                 </div>
