修复权限问题和过滤器问题

--- a/views/register.html
+++ b/views/register.html
@@ -8,6 +8,8 @@
 		<label>注册</label>
 		<div>手机号:<input type="text" name="tel"></div>
 		<div>密码:<input type="text" name="pwd"></div>
+		[ 0 --- 普通用户， 1 --- 管理员, 2 --- 总部用户, 3 --- 分销商]
+		<div>权限:<input type="text" name="prov"></div>
 		<input type="submit" name="获取相片"Submit/>
 	</form>	
 </body>
