增加特色商品，特价商品，抢购商品接口

--- a/views/index.html
+++ b/views/index.html
@@ -77,7 +77,7 @@
                             <i class="el-icon-document"></i>
                             <span slot="title" title="客户管理" href="#kehui" @click="addTab(userData)">客户管理</span>
                         </el-menu-item>
-                        <el-menu-item index="4" disabled>
+                        <el-menu-item index="4" >
                             <i class="el-icon-setting"></i>
                             <span slot="title">分销商管理</span>
                         </el-menu-item>
