--- a/views/product_edit.html
+++ b/views/product_edit.html
@@ -40,16 +40,33 @@
 
 
         </div>
-        <div class="form-group">
+         <div class="form-group">
             <div class="row">
                 <div class="col-sm-4">
                     <select required id="attr_productTypeId" class="form-control"></select>
-                </div>
+                
+            </div>
                 <div class="col-sm-4">
-                    <label>是否首页轮播</label><input style="margin:5px" type="checkbox" id="attr_is_carousel" />
+                    <label>首页轮播</label><input style="margin:5px" type="checkbox" id="attr_is_carousel" />
                 </div>
-                <div class="col-sm-4">
-                    <label>是否热推荐</label><input style="margin:5px" type="checkbox" id="attr_is_hot" />
+
+        </div>
+
+        <div class="form-group">
+            <div class="row">
+                </div>
+                
+                <div class="col-sm-5">
+                    <label>热推荐</label><input style="margin:5px" type="checkbox" id="attr_is_hot" />
+                </div>
+                <div class="col-sm-5">
+                    <label>特色商品</label><input style="margin:5px" type="checkbox" id="attr_is_tese" />
+                </div>
+                <div class="col-sm-5">
+                    <label>特价商品</label><input style="margin:5px" type="checkbox" id="attr_is_tejia" />
+                </div>
+                <div class="col-sm-5">
+                    <label>抢购</label><input style="margin:5px" type="checkbox" id="attr_is_qianggou" />
                 </div>
             </div>
 
